--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,5 @@
 <resources>
     <style name="SubmitButton">
-        <item name="android:background">?attr/buttonBackground</item>
         <item name="textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">25sp</item>
@@ -13,5 +12,11 @@
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/montserrat</item>
         <item name="android:inputType">number</item>
+        <item name="background">@drawable/edittext_border</item>
+        <item name="android:gravity">center</item>
+        <item name="android:ems">10</item>
+        <item name="android:layout_width">155dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">48dp</item>
     </style>
 </resources>
