--- a/app/src/main/res/layout/activity_2eng22.xml
+++ b/app/src/main/res/layout/activity_2eng22.xml
@@ -7,7 +7,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#d3c1b1"
         android:orientation="vertical"
         tools:context=".OptionScreen$activity_3eng21"
         tools:ignore="ExtraText">
@@ -40,8 +39,7 @@
             android:hint="@string/sub20201"
             android:importantForAutofill="no"
             android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal2"
