--- a/app/src/main/res/layout/activity_6eng21.xml
+++ b/app/src/main/res/layout/activity_6eng21.xml
@@ -7,9 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#d3c1b1"
         android:orientation="vertical"
-        tools:context=".activity_3it21"
+        tools:context=".activity_6eng21"
         tools:ignore="ExtraText">
 
         <TextView
@@ -19,133 +18,93 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:text="@string/sgpa"
+            android:text="@string/selected_option"
             android:textSize="30sp"
             android:textStyle="bold"
             tools:ignore="TextSizeCheck"
             tools:layout_editor_absoluteX="147dp"
-            tools:layout_editor_absoluteY="16dp" />
+            tools:layout_editor_absoluteY="16dp"
+            android:textColor="@color/black"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/editText"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
-            android:gravity="center"
             android:hint="@string/sub61"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
-            android:gravity="center"
             android:hint="@string/sub62"
-            android:importantForAutofill="no"
-            android:inputType="number"
             android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            android:importantForAutofill="no"
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
-            android:gravity="center"
             android:hint="@string/sub63"
             android:importantForAutofill="no"
-            android:inputType="number"
             android:minHeight="48dp"
-            android:textColorHint="#A1887F" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
-            android:gravity="center"
             android:hint="@string/sub64"
             android:importantForAutofill="no"
-            android:inputType="number"
             android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
-            android:gravity="center"
             android:hint="@string/sub65"
             android:importantForAutofill="no"
-            android:inputType="number"
             android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
-            android:gravity="center"
             android:hint="@string/sub66"
             android:importantForAutofill="no"
-            android:inputType="number"
             android:minHeight="48dp"
-            android:textColorHint="#A1887F" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
-            android:gravity="center"
             android:hint="@string/sub67"
             android:importantForAutofill="no"
-            android:inputType="number"
             android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <EditText
             android:id="@+id/editTextNumberDecimal8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edittext_border"
-            android:ems="10"
-            android:gravity="center"
             android:hint="@string/sub68"
             android:importantForAutofill="no"
-            android:inputType="number"
             android:minHeight="48dp"
-            android:textColorHint="#8D6E63" />
+            style="@style/editText"/>
 
         <!-- End of updated EditText views -->
 
@@ -155,22 +114,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="1dp"
-            android:backgroundTint="#A1887F"
             android:text="@string/button"
-            android:textColor="#212121" />
+            style="@style/SubmitButton"/>
 
         <TextView
             android:id="@+id/resultview6"
+            style="@style/editText"
             android:layout_width="150dp"
-            android:layout_height="40dp"
+            android:layout_height="48dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:background="@drawable/edittext_border"
             android:ems="5"
             android:gravity="center"
             android:hint="@string/total"
-            android:textColor="#000000"
-            android:textColorHint="#A1887F"
             android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="TextContrastCheck" />
