--- a/app/src/main/res/layout/activity_4eng21.xml
+++ b/app/src/main/res/layout/activity_4eng21.xml
@@ -15,7 +15,7 @@
         <TextView
             android:id="@+id/textView"
             style="@style/editText"
-            android:layout_width="382dp"
+            android:layout_width="387dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
@@ -162,11 +162,10 @@
             android:ems="5"
             android:gravity="center"
             android:hint="@string/total"
-            android:textColor="#000000"
-            android:textColorHint="#A1887F"
             android:textSize="20sp"
             android:textStyle="bold"
-            tools:ignore="TextContrastCheck" />
+            tools:ignore="TextContrastCheck"
+            style="@style/editText"/>
 
 
     </LinearLayout>
