--- a/app/src/main/res/layout/activity_6eng21.xml
+++ b/app/src/main/res/layout/activity_6eng21.xml
@@ -13,18 +13,18 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="287dp"
+            style="@style/editText"
+            android:layout_width="382dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:gravity="start"
             android:text="@string/selected_option"
-            android:textSize="30sp"
+            android:textColor="@color/black"
+            android:textSize="12sp"
             android:textStyle="bold"
-            tools:ignore="TextSizeCheck"
-            tools:layout_editor_absoluteX="147dp"
-            tools:layout_editor_absoluteY="16dp"
-            android:textColor="@color/black"/>
+            tools:ignore="TextSizeCheck" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal"
